# screenmind

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  com.screenmind.new-recording-notify.plist.template  install.sh  new-recording-notify.sh  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.planning/: BACKLOG.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  POSITIONING.md  TROUBLESHOOTING.md  USAGE.md
examples/: 01-debug-walkthrough.md  02-watch-youtube-tutorial.md  03-find-past-recording.md  README.md
screenmind/: __init__.py  config.py  ffmpeg.py  url_ingest.py  util.py
tests/: conftest.py  test_config.py  test_ffmpeg.py  test_url_ingest.py
