[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screenmind"
version = "0.3.0"
description = "Local MCP server that processes screen recordings into keyframes + OCR + audio transcript + timeline"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Alex Hale" }]
keywords = ["mcp", "claude", "screen-recording", "ocr", "ffmpeg"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = ["fastmcp>=2.0.0"]

[project.optional-dependencies]
ocr = ["pytesseract", "Pillow"]
ssim = ["scikit-image"]
whisper = ["faster-whisper"]
all = ["pytesseract", "Pillow", "scikit-image", "faster-whisper"]

[project.urls]
Homepage = "https://github.com/7alexhale5-rgb/screenmind"
Repository = "https://github.com/7alexhale5-rgb/screenmind"
Changelog = "https://github.com/7alexhale5-rgb/screenmind/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["screenmind*"]
exclude = ["tests*", "docs*", ".planning*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
